--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "eslint-plugin-react-compiler": "^0.0.0-experimental-9aef357-20240815",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "graphql": "^16.9.0",
     "husky": "^9.1.4",
     "jsdom": "^24.1.1",
     "prettier": "^3.3.3",
     "sass": "^1.77.8",
+    "sharp": "^0.33.5",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
   }
