--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
-    "firebase": "^10.13.0",
+    "firebase": "^10.13.1",
     "next": "14.2.5",
     "next-intl": "^3.17.6",
     "react": "^18",
@@ -28,6 +28,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
+    "redux-mock-store": "^1.5.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-redux": "^7.1.33",
+    "@types/redux-mock-store": "^1.0.6",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
